--- a/index3.html
+++ b/index3.html
@@ -111,6 +111,12 @@ button{cursor:pointer;font-weight:700;background:rgba(22,37,69,.85)}
 .text{white-space:pre-wrap;line-height:1.5;font-size:13px}
 mark{background:yellow;color:black}
 
+.help-text{
+  margin-top:4px;
+  font-size:12px;
+  color:var(--muted);
+}
+
 @media(max-width:900px){
   #titleSearch,#contentSearch,#date{
     font-size:16px;
@@ -157,11 +163,14 @@ mark{background:yellow;color:black}
   <!-- 건축허가일 -->
   <div>
     <label>건축허가일</label>
+
     <div style="display:flex;gap:6px;margin-bottom:6px">
       <button class="preset" data-d="2013-09-15">2013.09.15 이후</button>
       <button class="preset" data-d="2019-03-28">2019.03.28 이후</button>
     </div>
-    <input type="date" id="date" placeholder="건축허가일 날짜입력">
+
+    <input type="date" id="date">
+    <div class="help-text">※ 건축허가일 날짜를 입력하세요</div>
   </div>
 
 </div>
@@ -226,17 +235,14 @@ function highlight(t,k){
   return t.replace(new RegExp(`(${k})`,'gi'),'<mark>$1</mark>');
 }
 
-/* 🔥 핵심 수정 로직 */
 function renderResults(){
   resultsEl.innerHTML='';
   const keyword = contentSearch.value.trim().toLowerCase();
   let targets = [];
 
   if (keyword) {
-    // 내용검색 시: 전체 기준 대상
     targets = DATA;
   } else {
-    // 체크된 검사항목만
     document.querySelectorAll('#topics input:checked').forEach(cb=>{
       (TITLE_MAP[cb.value]||[]).forEach(i=>targets.push(i));
     });
@@ -264,7 +270,7 @@ function renderResults(){
   });
 }
 
-/* ===== 이벤트 ===== */
+/* 이벤트 */
 document.getElementById('increase-font').onclick=()=>{currentFontSize++;applyFont()};
 document.getElementById('decrease-font').onclick=()=>{currentFontSize=Math.max(10,currentFontSize-1);applyFont()};
 document.getElementById('run').onclick=renderResults;
