--- a/index3.html
+++ b/index3.html
@@ -117,7 +117,7 @@ button{cursor:pointer;font-weight:700;background:rgba(22,37,69,.85)}
 .range{font-size:12px;color:var(--muted)}
 
 .row{margin-top:6px}
-.text{white-space:normal;line-height:1.5;font-size:13px;margin:0;padding:0}
+.text{white-space:pre-line;line-height:1.5;font-size:13px;margin:0;padding:0}
 mark{background:yellow;color:black}
 
 .help-text{
@@ -347,3 +347,4 @@ document.querySelectorAll('.preset').forEach(b=>{
 
 </body>
 </html>
+
