--- a/index3.html
+++ b/index3.html
@@ -10,6 +10,9 @@
   --bg:#0b1220; --card:#111b2e; --muted:#9fb0d0; --text:#e7eefc;
   --green:#19c37d; --red:#ff4d4f; --line:#22314f;
   --shadow:0 10px 30px rgba(0,0,0,.35);
+
+  /* ===== (추가) 헤더 높이 변수: JS에서 자동 계산해 넣음 ===== */
+  --header-h: 0px;
 }
 *{box-sizing:border-box}
 body{
@@ -57,6 +60,11 @@ h1{margin:0;font-size:18px}
   padding:12px;
   box-shadow:var(--shadow);
   margin-top:10px;
+
+  /* ===== (추가) 검색/선택 패널 고정 ===== */
+  position: sticky;
+  top: calc(var(--header-h) + 10px);
+  z-index: 4;
 }
 .controls{
   display:grid;
@@ -213,6 +221,15 @@ mark{background:yellow;color:black}
 </div>
 
 <script>
+/* ===== (추가) 헤더 높이를 CSS 변수로 반영해서 panel sticky top 자동 보정 ===== */
+function setHeaderHeightVar(){
+  const header = document.querySelector('header');
+  const h = header ? header.offsetHeight : 0;
+  document.documentElement.style.setProperty('--header-h', h + 'px');
+}
+window.addEventListener('load', setHeaderHeightVar);
+window.addEventListener('resize', setHeaderHeightVar);
+
 let DATA=[], TITLE_MAP={}, currentFontSize=14;
 const topicsEl=document.getElementById('topics');
 const resultsEl=document.getElementById('results');
@@ -347,4 +364,3 @@ document.querySelectorAll('.preset').forEach(b=>{
 
 </body>
 </html>
-
