--- a/index3.html
+++ b/index3.html
@@ -58,27 +58,6 @@ h1{margin:0;font-size:18px}
   box-shadow:var(--shadow);
   margin-top:10px;
 }
-
-/* ===== [추가됨] 맨위로 버튼 ===== */
-#backToTop{
-  position:fixed;
-  right:18px;
-  bottom:18px;
-  padding:12px 14px;
-  border-radius:14px;
-  border:1px solid var(--line);
-  background:rgba(22,37,69,.9);
-  color:var(--text);
-  font-weight:800;
-  cursor:pointer;
-  box-shadow:var(--shadow);
-  display:none;
-  z-index:999;
-}
-#backToTop:hover{
-  background:rgba(40,70,120,.95);
-}
-
 .controls{
   display:grid;
   grid-template-columns:2fr 1fr;
@@ -164,6 +143,44 @@ mark{background:yellow;color:black}
   border-radius:8px;
   box-shadow:0 0 30px rgba(0,0,0,0.6);
 }
+
+/* ✅ 추가: 검색 돌아가기(맨위로) 버튼 스타일 */
+#backToTopBtn{
+  position:fixed;
+  right:18px;
+  bottom:18px;
+  width:auto;
+  padding:12px 14px;
+  border-radius:14px;
+  border:1px solid var(--line);
+  background:rgba(22,37,69,.92);
+  color:var(--text);
+  font-weight:800;
+  cursor:pointer;
+  box-shadow:var(--shadow);
+  display:none;           /* 스크롤 내릴 때만 표시 */
+  z-index:999;
+  user-select:none;
+}
+#backToTopBtn:hover{
+  background:rgba(35,60,105,.95);
+}
+
+@media(max-width:900px){
+  #titleSearch,#contentSearch,#date{
+    font-size:16px;
+    padding:14px;
+    height:48px;
+  }
+
+  /* ✅ 추가: 모바일에서 버튼이 너무 커 보이면 살짝 축소 */
+  #backToTopBtn{
+    right:12px;
+    bottom:12px;
+    padding:11px 12px;
+    border-radius:12px;
+  }
+}
 </style>
 </head>
 
@@ -185,7 +202,34 @@ mark{background:yellow;color:black}
 <div class="wrap">
 <div class="panel">
 <div class="controls">
-  <!-- (중략: 기존 코드 그대로) -->
+
+  <!-- 검사항목 -->
+  <div>
+    <input id="titleSearch" placeholder="검사항목(제목) 검색">
+    <input id="contentSearch" placeholder="기준 내용 검색 (예: 0.7 m, 조도, 피난공간)" style="margin-top:6px">
+
+    <div style="display:flex;gap:6px;margin:6px 0">
+      <button id="run">적용 표시</button>
+      <button id="reset">초기화</button>
+    </div>
+
+    <label>검사항목 선택</label>
+    <div class="topics" id="topics"></div>
+  </div>
+
+  <!-- 건축허가일 -->
+  <div>
+    <label>건축허가일</label>
+    <div style="display:flex;gap:6px;margin-bottom:6px;flex-wrap:wrap">
+      <button class="preset" data-d="2013-09-15">2013.09.15 이후</button>
+      <button class="preset" data-d="2015-05-13">2015.05.13 이후</button>
+      <button class="preset" data-d="2017-01-28">2017.01.28 이후</button>
+      <button class="preset" data-d="2019-03-28">2019.03.28 이후</button>
+    </div>
+    <input type="date" id="date">
+    <div class="help-text">※ 건축허가일 날짜를 입력하세요</div>
+  </div>
+
 </div>
 </div>
 
@@ -193,20 +237,155 @@ mark{background:yellow;color:black}
 <footer style="margin-top:10px">🟩 적용 / 🟥 미적용</footer>
 </div>
 
-<!-- ===== [추가됨] 검색 돌아가기 버튼 ===== -->
-<button id="backToTop">🔍 검색 돌아가기</button>
+<!-- 이미지 확대 모달 -->
+<div id="imageModal" class="image-modal" onclick="closeImageModal()">
+  <img id="modalImage">
+</div>
+
+<!-- ✅ 추가: 검색 돌아가기(맨위로) 버튼 -->
+<button id="backToTopBtn" type="button">🔍 검색 돌아가기</button>
 
 <script>
-/* ===== [추가됨] 맨위로 버튼 동작 ===== */
-const backBtn = document.getElementById('backToTop');
+let DATA=[], TITLE_MAP={}, currentFontSize=14;
+const topicsEl=document.getElementById('topics');
+const resultsEl=document.getElementById('results');
+const dateEl=document.getElementById('date');
+const titleSearch=document.getElementById('titleSearch');
+const contentSearch=document.getElementById('contentSearch');
+const fontTargets='body, input, button, .topic span, .title, .text, .badge, .range';
 
-window.addEventListener('scroll', ()=>{
-  backBtn.style.display = window.scrollY > 300 ? 'block' : 'none';
+function applyFont(){
+  document.querySelectorAll(fontTargets).forEach(e=>{
+    e.style.fontSize=currentFontSize+'px';
+  });
+}
+
+fetch('./data/criteria.json')
+.then(r=>r.json())
+.then(j=>{
+  DATA=j.criteria||[];
+  DATA.forEach(i=>{
+    if(!TITLE_MAP[i.title]) TITLE_MAP[i.title]=[];
+    TITLE_MAP[i.title].push(i);
+  });
+  renderTopics();
 });
 
-backBtn.onclick = ()=>{
-  window.scrollTo({ top:0, behavior:'smooth' });
+function renderTopics(){
+  topicsEl.innerHTML='';
+  Object.keys(TITLE_MAP).forEach(t=>{
+    if(titleSearch.value && !t.includes(titleSearch.value)) return;
+    const l=document.createElement('label');
+    l.className='topic';
+    const c=document.createElement('input');
+    c.type='checkbox'; c.value=t;
+    c.onchange=renderResults;
+    const s=document.createElement('span');
+    s.innerHTML=highlight(t,titleSearch.value);
+    l.append(c,s);
+    topicsEl.appendChild(l);
+  });
+}
+
+function renderImage(imagePath){
+  if(!imagePath) return '';
+  return `
+    <div style="margin-top:10px">
+      <img src="${imagePath}"
+           style="width:100%; max-width:400px; cursor:zoom-in; border:1px solid #22314f; border-radius:8px;"
+           onclick="openImageModal('${imagePath}')">
+      <div style="margin-top:4px;font-size:12px;color:#9fb0d0;text-align:center">
+        ※ 이미지를 크게 보려면 클릭하시오.
+      </div>
+    </div>
+  `;
+}
+
+function openImageModal(src){
+  document.getElementById('modalImage').src=src;
+  document.getElementById('imageModal').style.display='flex';
+}
+function closeImageModal(){
+  document.getElementById('imageModal').style.display='none';
+}
+
+function isApplied(d,f,t){
+  if(!d) return false;
+  const b=new Date(d);
+  if(f && b<new Date(f)) return false;
+  if(t && b>new Date(t)) return false;
+  return true;
+}
+
+function highlight(t,k){
+  if(!k) return t;
+  return t.replace(new RegExp(`(${k})`,'gi'),'<mark>$1</mark>');
+}
+
+function renderResults(){
+  resultsEl.innerHTML='';
+  const keyword = contentSearch.value.trim().toLowerCase();
+  let targets = [];
+
+  if (keyword) {
+    targets = DATA;
+  } else {
+    document.querySelectorAll('#topics input:checked').forEach(cb=>{
+      (TITLE_MAP[cb.value]||[]).forEach(i=>targets.push(i));
+    });
+  }
+
+  targets.forEach(i=>{
+    const hay=(i.title+i.label+i.text).toLowerCase();
+    if(keyword && !hay.includes(keyword)) return;
+
+    const card=document.createElement('div');
+    card.className='card';
+    card.innerHTML=`
+      <div class="card-header">
+        <div class="title">${highlight(i.title,contentSearch.value)}</div>
+        <div class="badge ${isApplied(dateEl.value,i.from,i.to)?'ok':'no'}">
+          ${isApplied(dateEl.value,i.from,i.to)?'🟩 적용':'🟥 미적용'}
+          <div class="range">${i.from||'—'} ~ ${i.to||'현재'}</div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="text">
+          ${highlight(i.text,contentSearch.value)}
+        </div>
+      </div>
+
+      ${renderImage(i.image)}
+    `;
+    resultsEl.appendChild(card);
+  });
+}
+
+/* 이벤트 */
+document.getElementById('increase-font').onclick=()=>{currentFontSize++;applyFont()};
+document.getElementById('decrease-font').onclick=()=>{currentFontSize=Math.max(10,currentFontSize-1);applyFont()};
+document.getElementById('run').onclick=renderResults;
+document.getElementById('reset').onclick=()=>{
+  titleSearch.value=''; contentSearch.value=''; dateEl.value='';
+  document.querySelectorAll('#topics input').forEach(c=>c.checked=false);
+  renderTopics(); renderResults();
 };
+titleSearch.oninput=renderTopics;
+contentSearch.oninput=renderResults;
+document.querySelectorAll('.preset').forEach(b=>{
+  b.onclick=()=>{dateEl.value=b.dataset.d;renderResults();}
+});
+
+/* ✅ 추가: 검색 돌아가기(맨위로) 버튼 동작 */
+const backToTopBtn = document.getElementById('backToTopBtn');
+window.addEventListener('scroll', ()=>{
+  // 250px 이상 내려가면 표시
+  backToTopBtn.style.display = (window.scrollY > 250) ? 'block' : 'none';
+});
+backToTopBtn.addEventListener('click', ()=>{
+  window.scrollTo({ top: 0, behavior: 'smooth' });
+});
 </script>
 
 </body>
