--- a/index3.html
+++ b/index3.html
@@ -83,7 +83,7 @@ button{cursor:pointer;font-weight:700;background:rgba(22,37,69,.85)}
   border:1px solid var(--line);
   border-radius:12px;
   padding:8px;
-  max-height:260px;
+  max-height:220px;   /* ✅ 원복: 버튼 외 변경 금지 조건 */
   overflow-y:auto;
 }
 .topic{
@@ -180,6 +180,22 @@ mark{background:yellow;color:black}
     padding:11px 12px;
     border-radius:12px;
   }
+
+  /* ✅ 추가: 모바일에서 빠른선택 버튼 4개 한 줄 + 높이 2배 */
+  .preset-row{
+    display:grid !important;
+    grid-template-columns:repeat(4, 1fr) !important;
+    gap:6px !important;
+    margin-bottom:6px !important;
+  }
+  .preset-row .preset{
+    width:100%;
+    padding:14px 6px;
+    font-size:11px;
+    line-height:1.05;
+    white-space:nowrap;
+    text-align:center;
+  }
 }
 </style>
 </head>
@@ -220,7 +236,7 @@ mark{background:yellow;color:black}
   <!-- 건축허가일 -->
   <div>
     <label>건축허가일</label>
-    <div style="display:flex;gap:6px;margin-bottom:6px;flex-wrap:wrap">
+    <div class="preset-row" style="display:flex;gap:6px;margin-bottom:6px;flex-wrap:wrap">
       <button class="preset" data-d="2013-09-15">2013.09.15 이후</button>
       <button class="preset" data-d="2015-05-13">2015.05.13 이후</button>
       <button class="preset" data-d="2017-01-28">2017.01.28 이후</button>
@@ -380,7 +396,6 @@ document.querySelectorAll('.preset').forEach(b=>{
 /* ✅ 추가: 검색 돌아가기(맨위로) 버튼 동작 */
 const backToTopBtn = document.getElementById('backToTopBtn');
 window.addEventListener('scroll', ()=>{
-  // 250px 이상 내려가면 표시
   backToTopBtn.style.display = (window.scrollY > 250) ? 'block' : 'none';
 });
 backToTopBtn.addEventListener('click', ()=>{
@@ -390,4 +405,3 @@ backToTopBtn.addEventListener('click', ()=>{
 
 </body>
 </html>
-
