--- a/index3.html
+++ b/index3.html
@@ -227,7 +227,7 @@ mark{background:yellow;color:black}
     <input id="search" placeholder="검사항목 or 기준내용 검색">
 
     <div style="display:flex;gap:6px;margin:6px 0">
-      <button id="run">적용 표시</button>
+      <button id="run">검색</button>
       <button id="reset">초기화</button>
     </div>
 
@@ -424,3 +424,4 @@ backToTopBtn.addEventListener('click', ()=>{
 
 </body>
 </html>
+
